@@ -3,3 +3,4 @@ GB Europe/London
 MH Pacific/Majuro
 ML Africa/Bamako
 MY Asia/Kuala_Lumpur
+SJ Europe/Oslo
