@@ -28,5 +28,6 @@ tzsetup (0.1) UNRELEASED; urgency=low
   * No more question for the Marshall Is, only one modern time zone.
   * Same for Mali.
   * And Malaysia.
+  * Svalbard and Jan Mayen are on Oslo time, add override.
 
- -- Joey Hess <joeyh@debian.org>  Mon, 25 Jul 2005 12:49:21 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 25 Jul 2005 12:52:46 -0400
